--- a/idin-portfolio.html
+++ b/idin-portfolio.html
@@ -135,12 +135,12 @@
             Khon Kaen 40002, Thailand <br>
         </address>
         <p>
-            <b>Email:</b> <a href="mailto:idin.k@kkumail.com">idin.k@kkumail.com</a>
+            <b>Email:</b> <a href="mailto:idin.k@kkumail.com">idin.k@kkumail.com</a><br>
             <b>Personal Website:</b> <a href="">idin.k@kkumail.com</a>
         </p>
     </footer>
     <hr />
-
+    <em>This portfolio was created as part of EN813701 Web Application Development course at Khon Kaen University.</em>
 </body>
 
 </html>
