--- a/idin-portfolio.html
+++ b/idin-portfolio.html
@@ -136,7 +136,7 @@
         </address>
         <p>
             <b>Email:</b> <a href="mailto:idin.k@kkumail.com">idin.k@kkumail.com</a><br>
-            <b>Personal Website:</b> <a href="">idin.k@kkumail.com</a>
+            <b>Personal Website:</b> <a href="https://idin-khansawang.github.io/idin.github.io/idin-portfolio.html">www.idin-portfolio.com</a>
         </p>
     </footer>
     <hr />
