--- a/idin-portfolio.html
+++ b/idin-portfolio.html
@@ -67,19 +67,24 @@
         </p>
         <audio src="/labs/lab1/portfolio-page/audio/test-audio.mp3" controls></audio>
     </section>
+
     <hr />
-    <h2>
-        Technical Skills
-    </h2>
-    <h3>
-        Programming Languages
-    </h3>
-    <ul>
-        <li><b>Web Deverlopment:</b> HTML5, CSS, JavaScript</li>
-        <li><b>Programming:</b> Python, Java, C/C++</li>
-        <li><b>Hardware:</b> Arduino</li>
-        <li><b>Tools:</b> Arduino IDE, VS Code, Git</li>
-    </ul>
+
+    <section id="skills">
+        <h2>
+            Technical Skills
+        </h2>
+        <h3>
+            Programming Languages
+        </h3>
+        <ul>
+            <li><b>Web Deverlopment:</b> HTML5, CSS, JavaScript</li>
+            <li><b>Programming:</b> Python, Java, C/C++</li>
+            <li><b>Hardware:</b> Arduino</li>
+            <li><b>Tools:</b> Arduino IDE, VS Code, Git</li>
+        </ul>
+    </section>
+
     <hr>
     <section id="blog">
         <h2>My Blog</h2>
@@ -136,7 +141,8 @@
         </address>
         <p>
             <b>Email:</b> <a href="mailto:idin.k@kkumail.com">idin.k@kkumail.com</a><br>
-            <b>Personal Website:</b> <a href="https://idin-khansawang.github.io/idin.github.io/idin-portfolio.html">www.idin-portfolio.com</a>
+            <b>Personal Website:</b> <a
+                href="https://idin-khansawang.github.io/idin.github.io/idin-portfolio.html">www.idin-portfolio.com</a>
         </p>
     </footer>
     <hr />
