--- a/idin-portfolio.html
+++ b/idin-portfolio.html
@@ -37,7 +37,7 @@
         <!-- Include a video element -->
         <h3>Personal introduction Video</h3>
         <figure>
-            <video src="/labs/lab1/portfolio-page/video/test-video.mp4" width="500" height="auto" controls>
+            <video src="video/test-video.mp4" width="500" height="auto" controls>
                 <source type="video/mp4">
             </video>
             <figcaption>It's my old project for Advance Compro class.</figcaption>
@@ -65,7 +65,7 @@
         <p>
             Listen to my song.
         </p>
-        <audio src="/labs/lab1/portfolio-page/audio/test-audio.mp3" controls></audio>
+        <audio src="audio/test-audio.mp3" controls></audio>
     </section>
 
     <hr />
