--- a/idin-portfolio.html
+++ b/idin-portfolio.html
@@ -37,8 +37,8 @@
         <!-- Include a video element -->
         <h3>Personal introduction Video</h3>
         <figure>
-            <video src="video/test-video.mp4" width="500" height="auto" controls>
-                <source type="video/mp4">
+            <video width="500" height="auto" controls>
+                <source src="video/test-video.mp4" type="video/mp4">
             </video>
             <figcaption>It's my old project for Advance Compro class.</figcaption>
         </figure>
@@ -65,7 +65,9 @@
         <p>
             Listen to my song.
         </p>
-        <audio src="audio/test-audio.mp3" controls></audio>
+        <audio controls>
+            <source src="audio/test-audio.mp3" type="audio/mp3">
+        </audio>
     </section>
 
     <hr />
