--- a/idin-portfolio.html
+++ b/idin-portfolio.html
@@ -131,7 +131,7 @@
 
     <hr />
 
-    <footer>
+    <footer id="contact">
         <h3>Contact information</h3>
         <address>
             <b>Idin Khansawang</b><br>
